--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "NEOXY",
+	"name": "bangsul-Botz",
 	"description": "WhatsApp Bot Using Lib Baileys",
 	"repository": "https://github.com/Lexxy24",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
